# jarvis-web-scraper

./: CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml
jarvis_web_scraper/: __init__.py  client.py  extractor.py  fetcher.py  models.py
jarvis_web_scraper.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_client.py  test_extractor.py  test_fetcher.py  test_fetcher_ssrf.py
